--- a/24S56_nathan.html
+++ b/24S56_nathan.html
@@ -63,7 +63,7 @@
 		<h3>
 			<div class = "container">
 				<ul>
-					<li>POKEDEX (created using Python) </li>
+					<li>POKEDEX <a href="https://github.com/nthnrt/Pokedex">(link to project)</a></li>
 						<ol>
 							<li>Displays a specific number of Pokemon</li>
 							<li>Displays all Pokemon with a specified total base stat</li>
