--- a/24S56_nathan.html
+++ b/24S56_nathan.html
@@ -73,7 +73,7 @@
 						</ol>
 						
 						<br>
-					<li>WEBFOLIO (created using HTML and CSS)</li>
+					<li>WEBFOLIO <a href = "https://github.com/nthnrt/Projects">(link to project)</a></li>
 						<ol>
 							<li>Makes use of external CSS to change fonts, colours, alignment, etc.
 							<li>Makes use of &lth1&gt, &lth2&gt, &ltp&gt, ordered/unordered lists, tables, etc.</li>
